--- a/package.json
+++ b/package.json
@@ -10,16 +10,29 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/themes": "^2.0.1",
     "@stripe/stripe-js": "^2.2.0",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/auth-ui-react": "^0.4.6",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.38.5",
+    "chart.js": "^4.4.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "geist": "^1.0.0",
+    "lucide-react": "^0.294.0",
     "next": "14.0.1",
+    "next-themes": "^0.2.1",
     "query-string": "^8.1.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
@@ -27,6 +40,7 @@
     "react-spinners": "^0.13.8",
     "stripe": "^14.3.0",
     "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "uniqid": "^5.4.0",
     "zustand": "^4.4.6"
   },
