--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.10.3",
     "stripe": "^14.3.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "uniqid": "^5.4.0",
+    "vaul": "^0.8.0",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
