--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "date-fns": "^2.30.0",
     "geist": "^1.0.0",
     "lucide-react": "^0.294.0",
-    "next": "14.0.1",
+    "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "query-string": "^8.1.0",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.9.1",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
@@ -54,7 +54,7 @@
     "@types/uniqid": "^5.3.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1",
+    "eslint-config-next": "^14.0.4",
     "postcss": "^8",
     "supabase": "^1.110.1",
     "tailwindcss": "^3.3.0",
