Update component import paths for better organization

--- a/components.json
+++ b/components.json
@@ -10,7 +10,7 @@
     "cssVariables": false
   },
   "aliases": {
-    "components": "@/componentsShadCn",
+    "components": "@/components",
     "utils": "@/lib/utils"
   }
 }
